2/2/25 11:30 PM -- add entrypoint (main)
2/2/25 1:00 PM  -- add perlin noise generator and test ascii output