@@ -1,5 +1,5 @@
-wordsearch: src/main.c src/perlin.c
-	gcc src/main.c src/perlin.c -o game -Wall -Werror -lm
+wordsearch: src/main.c src/dungeon.c src/util/perlin.c
+	gcc src/main.c src/dungeon.c src/util/perlin.c -o game -Wall -Werror -lm
 
 clean:
 	rm -f game
