@@ -1,0 +1,35 @@
+#pragma once
+
+#ifndef DUNGEON_X_DIM
+#define DUNGEON_X_DIM 80
+#endif
+#ifndef DUNGEON_Y_DIM
+#define DUNGEON_Y_DIM 21
+#endif
+
+#ifndef DUNGEON_ROOM_MIN_X
+#define DUNGEON_ROOM_MIN_X 4
+#endif
+#ifndef DUNGEON_ROOM_MIN_Y
+#define DUNGEON_ROOM_MIN_Y 3
+#endif
+#ifndef DUNGEON_ROOM_MAX_X
+#define DUNGEON_ROOM_MAX_X 10
+#endif
+#ifndef DUNGEON_ROOM_MAX_Y
+#define DUNGEON_ROOM_MAX_Y 10
+#endif
+
+#ifndef DUNGEON_MIN_NUM_ROOMS
+#define DUNGEON_MIN_NUM_ROOMS 6
+#endif
+#ifndef DUNGEON_MAX_NUM_ROOMS
+#define DUNGEON_MAX_NUM_ROOMS 12
+#endif
+
+#ifndef DUNGEON_PERLIN_SCALE_X
+#define DUNGEON_PERLIN_SCALE_X 0.05f
+#endif
+#ifndef DUNGEON_PERLIN_SCALE_Y
+#define DUNGEON_PERLIN_SCALE_Y 0.1f
+#endif
