@@ -1,6 +1,0 @@
-#pragma once
-
-void perlin_init();
-
-float perlin2f(float x, float y);
-double perlin2d(double x, double y);
