@@ -1,0 +1,107 @@
+#include "perlin.h"
+
+#include <stdlib.h>
+#include <stdint.h>
+#include <math.h>
+#include <string.h>
+
+
+static uint8_t
+    p[] = { 151,160,137,91,90,15,
+        131,13,201,95,96,53,194,233,7,225,140,36,103,30,69,142,8,99,37,240,21,10,23,
+        190, 6,148,247,120,234,75,0,26,197,62,94,252,219,203,117,35,11,32,57,177,33,
+        88,237,149,56,87,174,20,125,136,171,168, 68,175,74,165,71,134,139,48,27,166,
+        77,146,158,231,83,111,229,122,60,211,133,230,220,105,92,41,55,46,245,40,244,
+        102,143,54, 65,25,63,161, 1,216,80,73,209,76,132,187,208, 89,18,169,200,196,
+        135,130,116,188,159,86,164,100,109,198,173,186, 3,64,52,217,226,250,124,123,
+        5,202,38,147,118,126,255,82,85,212,207,206,59,227,47,16,58,17,182,189,28,42,
+        223,183,170,213,119,248,152, 2,44,154,163, 70,221,153,101,155,167, 43,172,9,
+        129,22,39,253, 19,98,108,110,79,113,224,232,178,185, 112,104,218,246,97,228,
+        251,34,242,193,238,210,144,12,191,179,162,241, 81,51,145,235,249,14,239,107,
+        49,192,214, 31,181,199,106,157,184, 84,204,176,115,121,50,45,127, 4,150,254,
+        138,236,205,93,222,114,67,29,24,72,243,141,128,195,78,66,215,61,156,180,
+    // same values duplicated >>
+        151,160,137,91,90,15,
+        131,13,201,95,96,53,194,233,7,225,140,36,103,30,69,142,8,99,37,240,21,10,23,
+        190, 6,148,247,120,234,75,0,26,197,62,94,252,219,203,117,35,11,32,57,177,33,
+        88,237,149,56,87,174,20,125,136,171,168, 68,175,74,165,71,134,139,48,27,166,
+        77,146,158,231,83,111,229,122,60,211,133,230,220,105,92,41,55,46,245,40,244,
+        102,143,54, 65,25,63,161, 1,216,80,73,209,76,132,187,208, 89,18,169,200,196,
+        135,130,116,188,159,86,164,100,109,198,173,186, 3,64,52,217,226,250,124,123,
+        5,202,38,147,118,126,255,82,85,212,207,206,59,227,47,16,58,17,182,189,28,42,
+        223,183,170,213,119,248,152, 2,44,154,163, 70,221,153,101,155,167, 43,172,9,
+        129,22,39,253, 19,98,108,110,79,113,224,232,178,185, 112,104,218,246,97,228,
+        251,34,242,193,238,210,144,12,191,179,162,241, 81,51,145,235,249,14,239,107,
+        49,192,214, 31,181,199,106,157,184, 84,204,176,115,121,50,45,127, 4,150,254,
+        138,236,205,93,222,114,67,29,24,72,243,141,128,195,78,66,215,61,156,180 };
+
+double fade(double t)
+{
+    return t * t * t * (t * (t * 6 - 15) + 10);
+}
+double lerp(double t, double a, double b)
+{
+    return a + t * (b - a);
+}
+double grad3(int32_t hash, double x, double y, double z)
+{
+    int32_t h = hash & 0xF;
+    double
+        u = (h < 8) ? x : y,
+        v = (h < 4) ? y : (h == 0xC || h == 0xE) ? x : z;
+    return ((h & 0x1) == 0 ? u : -u) + ((h & 0x2) == 0 ? v : -v);
+}
+
+double perlin2d(double x, double y)
+{
+    const double x_floor = floor(x);
+    const double y_floor = floor(y);
+
+    const int64_t X = (int64_t)x_floor & 0xFF;
+    const int64_t Y = (int64_t)y_floor & 0xFF;
+    x -= x_floor;
+    y -= y_floor;
+    const double u = fade(x);
+    const double v = fade(y);
+
+    return lerp(v,  lerp(u, grad3( p[p[X] + Y],         x,      y,      0 ),
+                            grad3( p[p[X + 1] + Y],     x - 1,  y,      0 ) ),
+                    lerp(u, grad3( p[p[X] + Y + 1],     x,      y - 1,  0 ),
+                            grad3( p[p[X + 1] + Y + 1], x - 1,  y - 1,  0 ) ) );
+}
+
+
+float fade_f(float t)
+{
+    return t * t * t * (t * (t * 6 - 15) + 10);
+}
+float lerp_f(float t, float a, float b)
+{
+    return a + t * (b - a);
+}
+float grad3_f(int32_t hash, float x, float y, float z)
+{
+    int32_t h = hash & 0xF;
+    float
+        u = (h < 8) ? x : y,
+        v = (h < 4) ? y : (h == 0xC || h == 0xE) ? x : z;
+    return ((h & 0x1) == 0 ? u : -u) + ((h & 0x2) == 0 ? v : -v);
+}
+
+float perlin2f(float x, float y)
+{
+    const float x_floor = floorf(x);
+    const float y_floor = floorf(y);
+
+    const int64_t X = (int64_t)x_floor & 0xFF;
+    const int64_t Y = (int64_t)y_floor & 0xFF;
+    x -= x_floor;
+    y -= y_floor;
+    const float u = fade_f(x);
+    const float v = fade_f(y);
+
+    return lerp_f(v, lerp_f(u,  grad3_f( p[p[X] + Y],         x,      y,      0 ),
+                                grad3_f( p[p[X + 1] + Y],     x - 1,  y,      0 ) ),
+                     lerp_f(u,  grad3_f( p[p[X] + Y + 1],     x,      y - 1,  0 ),
+                                grad3_f( p[p[X + 1] + Y + 1], x - 1,  y - 1,  0 ) ) );
+}
