@@ -1,0 +1,4 @@
+#pragma once
+
+double perlin2d(double x, double y);
+float perlin2f(float x, float y);
